--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
+    "framer-motion": "^11.11.11",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
