--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "framer-motion": "^11.11.11",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
