--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "simplex-noise": "^4.0.3"
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
